--- a/frontent/angular.json
+++ b/frontent/angular.json
@@ -37,6 +37,7 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/scss/bootstrap-grid.scss",
               "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
               "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
               "src/styles.sass"
