--- a/frontent/package.json
+++ b/frontent/package.json
@@ -30,6 +30,7 @@
     "@taiga-ui/icons": "^4.14.0",
     "@taiga-ui/kit": "^4.14.0",
     "@taiga-ui/layout": "^4.14.0",
+    "bootstrap": "^5.3.3",
     "ng-morph": "^4.8.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
