--- a/frontent/nginx.conf
+++ b/frontent/nginx.conf
@@ -1,32 +1,26 @@
-user www-data; 
-worker_processes auto;
-
-pid /run/nginx.pid;
-error_log /var/log/nginx/error.log;
-
-events {
-    worker_connections 768;
-}
+events {}
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     sendfile on;
-    tcp_nopush on; 
-    types_hash_max_size 2048;
-    ssl_prefer_server_ciphers on;
-
-    access_log /var/log/nginx/access.log;
-    gzip on;
-
-    include /etc/nginx/conf.d/*.conf; 
-    include /etc/nginx/sites-enabled/*;
+    keepalive_timeout 65;
 
     server {
         listen 80;
-        # server_name localhost;
-        root /usr/share/nginx/html;
+        server_name localhost;
+
+        root /usr/share/nginx/html/browser;
         index index.html index.htm;
+
         location / {
             try_files $uri $uri/ /index.html;
+        }
+
+        error_page 404 /404.html;
+        location = /404.html {
+            internal;
         }
     }
 }
