--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "7474:7474"
       - "7687:7687"
     environment:
-      NEO4J_AUTH: "neo4j/12345678"  # Замените на ваш пароль
+      NEO4J_AUTH: "neo4j/12345678"
     volumes:
       - neo4j_data:/data
 
@@ -16,6 +16,12 @@ services:
       context: ./backend
     ports:
       - "5001:5001"
+    volumes:
+      - ./backend:/app
+    environment:
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=12345678
     depends_on:
       - neo4j
 
@@ -23,7 +29,7 @@ services:
     build:
       context: ./frontent
     ports:
-      - "4200:4200"
+      - "80:80"
 
 volumes:
   neo4j_data:
