--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
 version: '3.9'
 
 services:
-  neo4j:
+  db:
+    container_name: neo4j
     image: neo4j:5.26
-    ports:
-      - "7474:7474"
-      - "7687:7687"
     environment:
-      NEO4J_AUTH: "neo4j/12345678"
+      NEO4J_AUTH: ${NEO4J_AUTH}
     volumes:
       - neo4j_data:/data
     healthcheck:
@@ -18,21 +16,20 @@ services:
       start_period: 30s
 
   backend:
+    container_name: backend
     build:
       context: ./backend
     ports:
       - "127.0.0.1:5001:5001"
-    volumes:
-      - ./backend:/app
     environment:
-      - NEO4J_URI=bolt://neo4j:7687
-      - NEO4J_USER=neo4j
-      - NEO4J_PASSWORD=12345678
+      - NEO4J_USER=${NEO4J_USER}
+      - NEO4J_PASSWORD=${NEO4J_PASSWORD}
     depends_on:
-      neo4j:
+      db:
         condition: service_healthy
 
   frontend:
+    container_name: frontend
     build:
       context: ./frontent
     ports:
