--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     environment:
       NEO4J_AUTH: ${NEO4J_AUTH}
     volumes:
-      - ./backend/db:/app/db
+      - ./backend/db:/app/db:ro
     depends_on:
       db:
         condition: service_healthy
